yaml/deploy-init-sidecar.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: busybox-deploy
  labels:
    env: demo
spec:
  replicas: 3
  selector:
    matchLabels:
      env: demo
  template:
    metadata:
      labels:
        env: demo
    spec:
      volumes:
      - name: shared-logs
        emptyDir: {}

      containers:
      - name: main-busybox
        image: busybox:1.28
        command: ['sh', '-c']
        args:
        - |
          while true; do
            echo "$(date) - The app is running!" >> /var/log/myapp/app.log;
            sleep 5;
          done
        volumeMounts:
        - name: shared-logs
          mountPath: /var/log/myapp

      - name: log-sidecar
        image: busybox:1.28
        command: ['sh', '-c', 'tail -n+1 -f /var/log/myapp/app.log']
        volumeMounts:
        - name: shared-logs
          mountPath: /var/log/myapp
