yaml/pod using ImagePullSecret.yaml
apiVersion: v1
kind: Pod
metadata:
  name: private-reg-pod
  namespace: demo-ns
spec:
  containers:
  - name: myapp
    image: myregistry.example.com/myimage:latest
  imagePullSecrets:
  - name: myregistrykey   # Reference to the secret created above
