yaml/pod using serviceAccount.yaml
apiVersion: v1
kind: Pod
metadata:
  name: prometheus-agent
  namespace: monitoring
spec:
  serviceAccountName: prometheus-sa   # Pod runs with this identity
  containers:
  - name: prometheus
    image: prom/prometheus:latest
