yaml/pod with config map, environment variables, secret.yaml
apiVersion: v1
kind: Pod
metadata:
  name: demo-pod
spec:
  containers:
  - name: myapp
    image: nginx

    # 1. Direct environment variables
    volumeMounts:
    - name: config-volume
      mountPath: /etc/config           # inside container
    - name: secret-volume
      mountPath: /etc/secret

  volumes:
  - name: config-volume
    configMap:
      name: app-config           # Mount entire ConfigMap as files
  - name: secret-volume
    secret:
      secretName: db-secret      # Mount entire Secret as files
