yaml/pod with node selector for labeled node.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: redis
  name: redis
spec:
  containers:
  - image: redis
    name: redis
  nodeSelector:
    gpu: "true"
