yaml/sidecar.yaml
apiVersion: v1
kind: Pod
metadata:
  name: myapp-pod
  labels:
    app.kubernetes.io/name: MyApp
spec:
  volumes:
  - name: shared-logs
    emptyDir: {}   # ephemeral volume shared between containers

  containers:
  - name: myapp-container
    image: busybox:1.28
    command: ['sh', '-c', 'echo The app is running! >> /var/log/myapp/app.log && sleep 3600']
    volumeMounts:
    - name: shared-logs
      mountPath: /var/log/myapp

  - name: log-sidecar
    image: busybox:1.28
    command: ['sh', '-c', 'tail -n+1 -f /var/log/myapp/app.log']
    volumeMounts:
    - name: shared-logs
      mountPath: /var/log/myapp
